Spring Data JPA での発行 SQL のロギング方法を実装した。

--- a/TryDataJPA/src/main/resources/application.properties
+++ b/TryDataJPA/src/main/resources/application.properties
@@ -17,3 +17,18 @@ spring.datasource.password=
 spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.open-in-view=false
+
+########################################
+# SQLをログ出力
+logging.level.org.hibernate.SQL=debug
+
+# SQLのバインドパラメーターをログ出力
+logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# SELECT文の結果をログ出力
+logging.level.org.hibernate.orm.jdbc.extract=trace
+
+# SQL整形
+spring.jpa.properties.hibernate.format_sql=true
+########################################
