設定の対象を、グループ分けした。

--- a/TryDataJDBC/src/main/resources/application.properties
+++ b/TryDataJDBC/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=TryDataJDBC
-
-# H2の設定
+########################################
+# <H2の設定>
 # 利用するドライバ、H2を使う場合はこの値で固定
 spring.datasource.driver-class-name=org.h2.Driver
 
@@ -15,5 +15,6 @@ spring.datasource.password=
 
 # data.sqlをschema.sqlの後に読み込むように設定
 spring.jpa.defer-datasource-initialization=true
-
+# </H2の設定>
+########################################
 spring.jpa.open-in-view=false
