--- a/TryDataJPA/src/main/resources/application.properties
+++ b/TryDataJPA/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=TryDataJPA
-
-# H2の設定
+########################################
+# <H2の設定>
 # 利用するドライバ、H2を使う場合はこの値で固定
 spring.datasource.driver-class-name=org.h2.Driver
 
@@ -15,10 +15,11 @@ spring.datasource.password=
 
 # data.sqlをschema.sqlの後に読み込むように設定
 spring.jpa.defer-datasource-initialization=true
-
-spring.jpa.open-in-view=false
-
+# </H2の設定>
 ########################################
+spring.jpa.open-in-view=false
+########################################
+# <SQLのロギング設定>
 # SQLをログ出力
 logging.level.org.hibernate.SQL=debug
 
@@ -31,4 +32,5 @@ logging.level.org.hibernate.orm.jdbc.extract=trace
 
 # SQL整形
 spring.jpa.properties.hibernate.format_sql=true
+# </SQLのロギング設定>
 ########################################
