SQL ロギングに関する設定方法の選択肢を追記した。

--- a/TryPaginationMyBatis/src/main/resources/application.properties
+++ b/TryPaginationMyBatis/src/main/resources/application.properties
@@ -33,9 +33,28 @@ spring.jpa.defer-datasource-initialization=true
 ########################################
 # <SQLロギングの設定>
 # log に SQL を出力する。
+
+# ログレベルの選択肢は次の通りであるが、通常はWARNまたは無指定が適当と考える。
+# ERROR, WARN, INFO, DEBUG, TRACE
+# logging.level.org.springframework=ERROR
 logging.level.org.springframework=WARN
-# リポジトリの FQCN（fully-qualified class name）を記述
-logging.level.com.example.MyBatisPractice.repository=DEBUG
+# logging.level.org.springframework=INFO
+# logging.level.org.springframework=DEBUG
+# logging.level.org.springframework=TRACE
+
+# リポジトリのパッケージ名のフルパス文字列か、
+# 完全修飾クラス名（FQCN（fully-qualified class name））を記述する。
+# ログレベルの選択肢は次の通り。
+# ERROR, WARN, INFO, DEBUG, TRACE
+# DEBUG → 発行しているSQL文が出力される。
+# TRACE → 発行しているSQL文と、Select文であれば、取得したレコード全件が出力される。
+# 記述例 → logging.level.com.example.MyBatisPractice.repository=DEBUG
+# 記述例 → logging.level.jp.co.rdb.repository=DEBUG
+# 記述例 ↓ リポジトリのパッケージ名のフルパス文字列で指定した場合
+# logging.level.jp.co.rdb.repository=TRACE
+# 記述例 ↓ 完全修飾クラス名（FQCN）で指定した場合
+# logging.level.jp.co.rdb.repository.PersonRepository=TRACE
+logging.level.jp.co.rdb.repository.PersonRepository=TRACE
 # </SQLロギングの設定>
 ########################################
 # 次の設定は、［A］で resultType を単にクラス名（"Mansion"）のみとするために、必要になった。
